@@ -1,5 +1,6 @@
 0.02
  - Add EXAMPLE2 section to doc.
+ - Add tests from Unicode::Block.
  - Update LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.14 version.
 
